--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-ui-router": "ui-router#~0.2.15",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "pouchdb": "~5.1.0"
   }
 }
