[bugfix-syntax] fixes syntax issues in angular files, changes the db name in the config

--- a/sync-gateway-config.json
+++ b/sync-gateway-config.json
@@ -6,7 +6,7 @@
     "Attach+"
   ],
   "databases": {
-    "test-database": {
+    "default": {
       "server": "walrus:data",
       "sync": "function (doc) {channel (doc.channels);}",
       "users": {
