--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
     "angular": "~1.4.8",
     "angular-ui-router": "ui-router#~0.2.15",
     "bootstrap": "~3.3.6",
-    "pouchdb": "~5.1.0"
+    "pouchdb": "4.0.3"
   }
 }
